{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 186,
  "lineage": "a2ba0ea1-4ab4-89b3-9e1a-79825a915944",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:security-group/sg-05a66203eab5ce91c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05a66203eab5ce91c",
            "ingress": [],
            "name": "first-eks-app-a65gKjdI-cluster-2023031701011886140000000d",
            "name_prefix": "first-eks-app-a65gKjdI-cluster-",
            "owner_id": "433240000570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-eks-app-a65gKjdI-cluster"
            },
            "tags_all": {
              "Name": "first-eks-app-a65gKjdI-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:security-group/sg-0d7226e18869d38e7",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0d7226e18869d38e7",
            "ingress": [],
            "name": "first-eks-app-a65gKjdI-node-2023031701011871080000000c",
            "name_prefix": "first-eks-app-a65gKjdI-node-",
            "owner_id": "433240000570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-eks-app-a65gKjdI-node",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "owned"
            },
            "tags_all": {
              "Name": "first-eks-app-a65gKjdI-node",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-358111480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a66203eab5ce91c",
            "security_group_rule_id": "sgr-00b9b51ede37d1877",
            "self": false,
            "source_security_group_id": "sg-0d7226e18869d38e7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1420808294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0af3428ffe16d6ccb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1904902595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0792eef2ccecf03ec",
            "self": false,
            "source_security_group_id": "sg-05a66203eab5ce91c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-930425424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-079b2ad9364390138",
            "self": false,
            "source_security_group_id": "sg-05a66203eab5ce91c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1406409115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0bf5f7a92f7f4869c",
            "self": false,
            "source_security_group_id": "sg-05a66203eab5ce91c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-441985330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0d8086108bf274e50",
            "self": false,
            "source_security_group_id": "sg-05a66203eab5ce91c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3598368502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0b48b341bb51a2141",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-207380364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0aa3cdea08bb849ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2818833507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d7226e18869d38e7",
            "security_group_rule_id": "sgr-0db18a6602c579a7a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c0b7edcebb96497",
            "domain": "vpc",
            "id": "eipalloc-03c0b7edcebb96497",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-215-45-241.compute-1.amazonaws.com",
            "public_ip": "44.215.45.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-terraform-eks-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:internet-gateway/igw-0136312486796b450",
            "id": "igw-0136312486796b450",
            "owner_id": "433240000570",
            "tags": {
              "Name": "my-terraform-eks-vpc"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c0b7edcebb96497",
            "connectivity_type": "public",
            "id": "nat-0fc984e843d3aafd2",
            "network_interface_id": "eni-05af2f6a677cd6f60",
            "private_ip": "10.0.1.18",
            "public_ip": "44.215.45.241",
            "subnet_id": "subnet-00a2068996dae2242",
            "tags": {
              "Name": "my-terraform-eks-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086e559af277c80a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fc984e843d3aafd2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086e559af277c80a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0136312486796b450",
            "id": "r-rtb-0bf7c87b357841a0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf7c87b357841a0e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:route-table/rtb-086e559af277c80a5",
            "id": "rtb-086e559af277c80a5",
            "owner_id": "433240000570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-terraform-eks-vpc-private"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:route-table/rtb-0bf7c87b357841a0e",
            "id": "rtb-0bf7c87b357841a0e",
            "owner_id": "433240000570",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-terraform-eks-vpc-public"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096cd755cd16d78f3",
            "route_table_id": "rtb-086e559af277c80a5",
            "subnet_id": "subnet-06fd509ea30dc21cb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c3ad52bcb6978a1",
            "route_table_id": "rtb-086e559af277c80a5",
            "subnet_id": "subnet-0fb87e24e3dff0bd9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046551ae44baed31f",
            "route_table_id": "rtb-086e559af277c80a5",
            "subnet_id": "subnet-0080877f7cdce905a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d60bbc6772b00a5",
            "route_table_id": "rtb-0bf7c87b357841a0e",
            "subnet_id": "subnet-00a2068996dae2242"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdac116697f532e6",
            "route_table_id": "rtb-0bf7c87b357841a0e",
            "subnet_id": "subnet-0e801f19fba26db81"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f043110884573ea8",
            "route_table_id": "rtb-0bf7c87b357841a0e",
            "subnet_id": "subnet-04486d3378a486f44"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-06fd509ea30dc21cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd509ea30dc21cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-0fb87e24e3dff0bd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb87e24e3dff0bd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-0080877f7cdce905a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0080877f7cdce905a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-private-us-east-1c",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-private-us-east-1c",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-00a2068996dae2242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a2068996dae2242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-0e801f19fba26db81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e801f19fba26db81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:subnet/subnet-04486d3378a486f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04486d3378a486f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433240000570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-terraform-eks-vpc-public-us-east-1c",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc-public-us-east-1c",
              "kubernetes.io/cluster/first-eks-app-a65gKjdI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-010ba191a9d5260d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:vpc/vpc-010ba191a9d5260d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0708cd2a08535e238",
            "default_route_table_id": "rtb-0ae357298525c618f",
            "default_security_group_id": "sg-021b47d44245fa3d4",
            "dhcp_options_id": "dopt-6503371e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010ba191a9d5260d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae357298525c618f",
            "owner_id": "433240000570",
            "tags": {
              "Name": "my-terraform-eks-vpc"
            },
            "tags_all": {
              "Name": "my-terraform-eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}